# TGF

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCM.xlsx  EVIDENCE.md  LICENSE  PROFILE_README.md  Parameters_5K.csv  README.md  SECURITY.md  TransNAS-TSAD model.py  Trans_u5_v2.py  Trans_x4.py  VTT_4.1.py  VTT_4.1_colab.ipynb  VTT_u5.py  abc.html  abc.md  anomalous_windows.csv  anomaly_results.csv  claude_data_prep.py  claude_selection.py  consolidate_smart.py  cooling_tower_report.txt  datapre.py  extract_sample_rows.py  flagged_candidates.csv  install_deps.py  install_venv_and_deps.ps1  merge_metadata.json  merged_selected_sheets.csv  model_comparison.py  moment_2026.py  moment_2026_46_latest.py  moment_2026_o4.5.py  moment_sonnet_45.py  moment_tgf_mom.py  (+11 more)
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
81 EXCEL FILES- CT PARAMS/: DCM_850_CT_TPD_Report_-_AUG_2024_to_AUG_2025__chosen.xlsx  DCM_850_CT_TPD_Report_-_April_2024_to_OCT_2025__chosen.xlsx  DCM_MPCWT_Monthly_Report_-_April_2013__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_August2013__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_Feb_2014__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_Jan_2014__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_July_2013_(2)__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_July_2013__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_June_2013__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_May_2013__chosen.xlsx  DCM_Mainplant_CWT_Monthly_Report_-_Oct_2013__chosen.xlsx  (+70 more)
Misc/: Output1.txt  (+3 more)
(+258 files in other folders)
