[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tgf-dosing"
version = "0.1.0"
description = "Autonomous cooling tower water treatment system"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Madhvansh"}]
keywords = ["cooling-tower", "water-treatment", "mpc", "anomaly-detection", "industrial-iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.2",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "ruff>=0.4",
]
moment = [
    "momentfm>=0.1.0",
]
online = [
    "river>=0.21",
]

[project.urls]
Homepage = "https://github.com/Madhvansh/TGF"
Repository = "https://github.com/Madhvansh/TGF"
Issues = "https://github.com/Madhvansh/TGF/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
